data table eklendi demo 2 son commit

--- a/UskudarDenetim.UI/UskudarDenetim.UI.csproj
+++ b/UskudarDenetim.UI/UskudarDenetim.UI.csproj
@@ -238,6 +238,8 @@
     <Content Include="Content\additional-css\attorney\style.css" />
     <Content Include="Content\animations.css" />
     <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\Datatable\datatable.css" />
+    <Content Include="Content\Datatable\datatable.js" />
     <Content Include="Content\dark\dark.css" />
     <Content Include="Content\dark\images\bordered-circle-dark.png" />
     <Content Include="Content\dark\images\logo-dark.png" />
@@ -279,14 +281,26 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="Content\Datatable\tr-datatable.json" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <Content Include="Images\1200x800\epdk.png" />
     <Content Include="Images\1200x800\gib.png" />
+    <Content Include="Images\1200x800\kgk.png" />
     <Content Include="Images\1200x800\resmigazete.jpg" />
     <Content Include="Images\1200x800\sgk.png" />
+    <Content Include="Images\1200x800\spk.png" />
+    <Content Include="Images\1200x800\tbmm.png" />
+    <Content Include="Images\1200x800\ticaretsicil.png" />
     <Content Include="Images\1200x800\turmob.png" />
     <Content Include="Images\160x160\ufukpf.png" />
     <Content Include="Images\160x160\Ustad.png" />
     <Content Include="Images\450x300\info.jpg" />
+    <Content Include="Images\datatable\sort_asc.png" />
+    <Content Include="Images\datatable\sort_asc_disabled.png" />
+    <Content Include="Images\datatable\sort_both.png" />
+    <Content Include="Images\datatable\sort_desc.png" />
+    <Content Include="Images\datatable\sort_desc_disabled.png" />
+    <Content Include="Images\1200x800\ito.jpg" />
     <Content Include="Images\kızkulesi\22.jpg" />
     <Content Include="Images\kızkulesi\23.jpg" />
     <Content Include="Images\kızkulesi\24.jpg" />
@@ -410,8 +424,10 @@
     <Content Include="Images\sliders\woman.png" />
     <Content Include="Images\sliders\yellow-bg.png" />
     <Content Include="Images\sprites.png" />
+    <Content Include="Images\ticaretsicil.png" />
     <Content Include="Images\ud-logo%402x.png" />
     <Content Include="Images\ud-logo.png" />
+    <Content Include="Images\banner\ud-tr.png" />
     <Content Include="Images\ui.totop%402x.png" />
     <Content Include="Images\ui.totop.png" />
     <Content Include="Scripts\bootstrap.js" />
