--- a/UskudarDenetim.UI/UskudarDenetim.UI.csproj
+++ b/UskudarDenetim.UI/UskudarDenetim.UI.csproj
@@ -84,8 +84,9 @@
     <Reference Include="Microsoft.Owin.Security.OAuth, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.Security.OAuth.3.0.1\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
@@ -216,6 +217,7 @@
     <Compile Include="Models\ModelActivityArea.cs" />
     <Compile Include="Models\ModelAddress.cs" />
     <Compile Include="Models\ModelAppointmentRequest.cs" />
+    <Compile Include="Models\ModelCatPI.cs" />
     <Compile Include="Models\ModelCircular.cs" />
     <Compile Include="Models\ModelCompany.cs" />
     <Compile Include="Models\ModelContact.cs" />
@@ -225,6 +227,7 @@
     <Compile Include="Models\ModelFooter.cs" />
     <Compile Include="Models\ModelHeader.cs" />
     <Compile Include="Models\ModelHRApplyForm.cs" />
+    <Compile Include="Models\ModelLogin.cs" />
     <Compile Include="Models\ModelPracticalInformation.cs" />
     <Compile Include="Models\ModelPracticalInformationViewModel.cs" />
     <Compile Include="Models\ModelSector.cs" />
@@ -839,7 +842,7 @@
     <Content Include="Views\Shared\_ReachUS.cshtml" />
     <Content Include="Views\Service\_WhatWeDo.cshtml" />
     <Content Include="Views\PracticalInformations\_PracticalInformations.cshtml" />
-    <Content Include="Views\Admin\Login.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Admin\Register.cshtml" />
     <Content Include="Views\Shared\_Subscribe.cshtml" />
     <Content Include="Views\Admin\Home.cshtml" />
