--- a/UskudarDenetim.UI/Web.config
+++ b/UskudarDenetim.UI/Web.config
@@ -19,6 +19,15 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="PracticalInformationCount" value="7" />
+    
+  <!--Mail Configuration-->
+   <add key="HostName" value="uskudardenetim.com" />
+   <add key="Port" value="587" />
+   <add key="Subject" value="Üsküdar Denetim yeminli Mali Müşavirlik" />
+   <add key="From" value="info@uskudardenetim.com" />
+   <add key="Credential_User" value="info@uskudardenetim.com" />
+  <!--Mail Configuration End-->
+  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
