toplantı talepleri ve mail gönderme

--- a/UskudarDenetim.UI/Web.config
+++ b/UskudarDenetim.UI/Web.config
@@ -23,7 +23,7 @@
   <!--Mail Configuration-->
    <add key="HostName" value="uskudardenetim.com" />
    <add key="Port" value="587" />
-   <add key="Subject" value="Üsküdar Denetim yeminli Mali Müşavirlik" />
+   <add key="Subject" value="Üsküdar Denetim Yeminli Mali Müşavirlik" />
    <add key="From" value="info@uskudardenetim.com" />
    <add key="Credential_User" value="info@uskudardenetim.com" />
   <!--Mail Configuration End-->
