--- a/UskudarDenetim.UI/UskudarDenetim.UI.csproj
+++ b/UskudarDenetim.UI/UskudarDenetim.UI.csproj
@@ -307,6 +307,7 @@
     <Content Include="Images\datatable\sort_desc.png" />
     <Content Include="Images\datatable\sort_desc_disabled.png" />
     <Content Include="Images\1200x800\ito.jpg" />
+    <Content Include="Images\header.png" />
     <Content Include="Images\kızkulesi\22.jpg" />
     <Content Include="Images\kızkulesi\23.jpg" />
     <Content Include="Images\kızkulesi\24.jpg" />
@@ -886,6 +887,8 @@
     <Content Include="Views\PracticalInformations\AddOrUpdate.cshtml" />
     <Content Include="Views\TeamMember\Detail.cshtml" />
     <Content Include="Views\Mail\Index.cshtml" />
+    <Content Include="Views\Home\AppointmentDetail.cshtml" />
+    <Content Include="Views\Home\AllAppointment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -898,11 +901,11 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Desktop\ExchangeRateLibrary-master\ExhangeRateService\ExhangeRateService.csproj">
+    <ProjectReference Include="..\..\..\Desktop\ExchangeRateLibrary-master\ExhangeRateService\ExhangeRateService.csproj">
       <Project>{d3982bc6-d4d1-4330-b3aa-01faa67c3f3d}</Project>
       <Name>ExhangeRateService</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Desktop\MailReceiver-master\MailReceiver.Base\MailReceiver.Base.csproj">
+    <ProjectReference Include="..\..\..\Desktop\MailReceiver-master\MailReceiver.Base\MailReceiver.Base.csproj">
       <Project>{a458c96d-c94f-44d0-9566-2871d5c4619c}</Project>
       <Name>MailReceiver.Base</Name>
     </ProjectReference>
